auth & location foreign key
