# routes/api.php
@@ -14,11 +14,22 @@ use Illuminate\Support\Facades\Route;
 |
 */
 
-Route::middleware('auth:sanctum')->get('/auth/user', function (Request $request) {
-    return $request->user();
+
+
+Route::post('/auth/register', [\SJoussin\Http\Controllers\AuthController::class, 'createUser']);
+Route::post('/auth/login', [\SJoussin\Http\Controllers\AuthController::class, 'loginUser']);
+Route::post('/auth/login/phone', [\SJoussin\Http\Controllers\AuthController::class, 'loginUserByPhone']);
+Route::post('/auth/token', [\SJoussin\Http\Controllers\AuthController::class, 'tokenUser']);
+
+
+
+Route::middleware(['auth:sanctum'])->group(function () {
+
+    Route::get('/auth/user', [\SJoussin\Http\Controllers\AuthController::class, 'loggedUser']);
+
+    Route::get('/users',  [\SJoussin\Http\Controllers\AuthController::class, 'getAll']);
+    Route::get('/user/{user}',  [\SJoussin\Http\Controllers\AuthController::class, 'get']);
+    Route::put('/user/{user}',  [\SJoussin\Http\Controllers\AuthController::class, 'update']);
+    Route::delete('/user/{user}', [\SJoussin\Http\Controllers\AuthController::class, 'destroy']);
 });
 
-
-Route::post('/auth/register', [\App\Http\Controllers\AuthController::class, 'createUser']);
-Route::post('/auth/login', [\App\Http\Controllers\AuthController::class, 'loginUser']);
-Route::post('/auth/token', [\App\Http\Controllers\AuthController::class, 'tokenUser']);
