# src/routes/user-routes-api-resource.php
@@ -1,6 +1,0 @@
-<?php
-
-Route::prefix("api")->group(function () {
-    Route::apiResource('user', \SJoussin\Http\Controllers\UserApiController::class);
-});
-
