# src/routes/user-routes-resource.php
@@ -1,4 +1,0 @@
-<?php
-
-
-Route::resource('user', \SJoussin\Http\Controllers\UserController::class);
